[gd_scene load_steps=17 format=3 uid="uid://dkg53t87a8a8u"]

[ext_resource type="Texture2D" uid="uid://cf2xjmeejgnkg" path="res://Assets/Game Ass/Foozle_2DT0001_Science_Fiction_Labs_Tileset/Tileset/level_tileset.png" id="1_eip0g"]
[ext_resource type="Script" path="res://Sceans/story/script/story_board_1.gd" id="1_iwsi2"]
[ext_resource type="Texture2D" uid="uid://dp7cwo0fs0pqi" path="res://Assets/Game Ass/Foozle_2DT0001_Science_Fiction_Labs_Tileset/Tileset/platform_moving.png" id="2_g2630"]
[ext_resource type="Texture2D" uid="uid://cuxeb74da73su" path="res://Assets/Game Ass/antagonists 2d cyborgf/2/Idle.png" id="4_lcxu1"]
[ext_resource type="Texture2D" uid="uid://dfecj3lvpp3e3" path="res://Assets/Game Ass/Dimensional_Portal.png" id="6_1uy2n"]
[ext_resource type="Texture2D" uid="uid://do7crqujrxm34" path="res://Assets/Game Ass/Futurestic bg/All source + png/BG only.png" id="6_6fal5"]
[ext_resource type="Texture2D" uid="uid://65dbmjdjt8q6" path="res://Assets/Game Ass/Futurestic bg/All source + png/BGFC L1.png" id="7_dlxv0"]
[ext_resource type="FontFile" uid="uid://5dt4q6bp18ia" path="res://Assets/Game Ass/FOnts/vecna-font/Vecna-oppx.ttf" id="8_cu1bv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oliye"]
texture = ExtResource("1_eip0g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
0:15/0 = 0
1:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ech3s"]
texture = ExtResource("2_g2630")
4:0/0 = 0
5:0/0 = 0
10:0/0 = 0
11:0/0 = 0
16:0/0 = 0
17:0/0 = 0
22:0/0 = 0
23:0/0 = 0
28:0/0 = 0
29:0/0 = 0
34:0/0 = 0
35:0/0 = 0
40:0/0 = 0
41:0/0 = 0
46:0/0 = 0
47:0/0 = 0
52:0/0 = 0
53:0/0 = 0
58:0/0 = 0
59:0/0 = 0
64:0/0 = 0
65:0/0 = 0
70:0/0 = 0
71:0/0 = 0
76:0/0 = 0
77:0/0 = 0
82:0/0 = 0
83:0/0 = 0
88:0/0 = 0
89:0/0 = 0
94:0/0 = 0
95:0/0 = 0
100:0/0 = 0
101:0/0 = 0
106:0/0 = 0
107:0/0 = 0
112:0/0 = 0
113:0/0 = 0
118:0/0 = 0
119:0/0 = 0
124:0/0 = 0
125:0/0 = 0
130:0/0 = 0
131:0/0 = 0
136:0/0 = 0
137:0/0 = 0
142:0/0 = 0
143:0/0 = 0
148:0/0 = 0
149:0/0 = 0
154:0/0 = 0
155:0/0 = 0
160:0/0 = 0
161:0/0 = 0
166:0/0 = 0
167:0/0 = 0
172:0/0 = 0
173:0/0 = 0
178:0/0 = 0
179:0/0 = 0
184:0/0 = 0
185:0/0 = 0
190:0/0 = 0
191:0/0 = 0
195:0/0 = 0
196:0/0 = 0
197:0/0 = 0
201:0/0 = 0
202:0/0 = 0
203:0/0 = 0
208:0/0 = 0
209:0/0 = 0
214:0/0 = 0
215:0/0 = 0
220:0/0 = 0
221:0/0 = 0
226:0/0 = 0
227:0/0 = 0
232:0/0 = 0
233:0/0 = 0
238:0/0 = 0
239:0/0 = 0
244:0/0 = 0
245:0/0 = 0
250:0/0 = 0
251:0/0 = 0
256:0/0 = 0
257:0/0 = 0
262:0/0 = 0
263:0/0 = 0
268:0/0 = 0
269:0/0 = 0
274:0/0 = 0
275:0/0 = 0
280:0/0 = 0
281:0/0 = 0
286:0/0 = 0
287:0/0 = 0
292:0/0 = 0
293:0/0 = 0
298:0/0 = 0
299:0/0 = 0
304:0/0 = 0
305:0/0 = 0
310:0/0 = 0
311:0/0 = 0
316:0/0 = 0
317:0/0 = 0
322:0/0 = 0
323:0/0 = 0
328:0/0 = 0
329:0/0 = 0
334:0/0 = 0
335:0/0 = 0
340:0/0 = 0
341:0/0 = 0
346:0/0 = 0
347:0/0 = 0
352:0/0 = 0
353:0/0 = 0
358:0/0 = 0
359:0/0 = 0
364:0/0 = 0
365:0/0 = 0
370:0/0 = 0
371:0/0 = 0
376:0/0 = 0
377:0/0 = 0
382:0/0 = 0
383:0/0 = 0
388:0/0 = 0
389:0/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
45:1/0 = 0
46:1/0 = 0
47:1/0 = 0
51:1/0 = 0
52:1/0 = 0
53:1/0 = 0
57:1/0 = 0
58:1/0 = 0
59:1/0 = 0
63:1/0 = 0
64:1/0 = 0
65:1/0 = 0
69:1/0 = 0
70:1/0 = 0
71:1/0 = 0
75:1/0 = 0
76:1/0 = 0
77:1/0 = 0
81:1/0 = 0
82:1/0 = 0
83:1/0 = 0
87:1/0 = 0
88:1/0 = 0
89:1/0 = 0
93:1/0 = 0
94:1/0 = 0
95:1/0 = 0
99:1/0 = 0
100:1/0 = 0
101:1/0 = 0
105:1/0 = 0
106:1/0 = 0
107:1/0 = 0
111:1/0 = 0
112:1/0 = 0
113:1/0 = 0
117:1/0 = 0
118:1/0 = 0
119:1/0 = 0
123:1/0 = 0
124:1/0 = 0
125:1/0 = 0
129:1/0 = 0
130:1/0 = 0
131:1/0 = 0
135:1/0 = 0
136:1/0 = 0
137:1/0 = 0
141:1/0 = 0
142:1/0 = 0
143:1/0 = 0
146:1/0 = 0
147:1/0 = 0
148:1/0 = 0
149:1/0 = 0
153:1/0 = 0
154:1/0 = 0
155:1/0 = 0
159:1/0 = 0
160:1/0 = 0
161:1/0 = 0
165:1/0 = 0
166:1/0 = 0
167:1/0 = 0
171:1/0 = 0
172:1/0 = 0
173:1/0 = 0
177:1/0 = 0
178:1/0 = 0
179:1/0 = 0
183:1/0 = 0
184:1/0 = 0
185:1/0 = 0
189:1/0 = 0
190:1/0 = 0
191:1/0 = 0
195:1/0 = 0
196:1/0 = 0
197:1/0 = 0
201:1/0 = 0
202:1/0 = 0
203:1/0 = 0
207:1/0 = 0
208:1/0 = 0
209:1/0 = 0
213:1/0 = 0
214:1/0 = 0
215:1/0 = 0
219:1/0 = 0
220:1/0 = 0
221:1/0 = 0
225:1/0 = 0
226:1/0 = 0
227:1/0 = 0
231:1/0 = 0
232:1/0 = 0
233:1/0 = 0
237:1/0 = 0
238:1/0 = 0
239:1/0 = 0
243:1/0 = 0
244:1/0 = 0
245:1/0 = 0
248:1/0 = 0
249:1/0 = 0
250:1/0 = 0
251:1/0 = 0
255:1/0 = 0
256:1/0 = 0
257:1/0 = 0
261:1/0 = 0
262:1/0 = 0
263:1/0 = 0
267:1/0 = 0
268:1/0 = 0
269:1/0 = 0
273:1/0 = 0
274:1/0 = 0
275:1/0 = 0
279:1/0 = 0
280:1/0 = 0
281:1/0 = 0
285:1/0 = 0
286:1/0 = 0
287:1/0 = 0
291:1/0 = 0
292:1/0 = 0
293:1/0 = 0
297:1/0 = 0
298:1/0 = 0
299:1/0 = 0
303:1/0 = 0
304:1/0 = 0
305:1/0 = 0
309:1/0 = 0
310:1/0 = 0
311:1/0 = 0
315:1/0 = 0
316:1/0 = 0
317:1/0 = 0
321:1/0 = 0
322:1/0 = 0
323:1/0 = 0
327:1/0 = 0
328:1/0 = 0
329:1/0 = 0
333:1/0 = 0
334:1/0 = 0
335:1/0 = 0
339:1/0 = 0
340:1/0 = 0
341:1/0 = 0
345:1/0 = 0
346:1/0 = 0
347:1/0 = 0
351:1/0 = 0
352:1/0 = 0
353:1/0 = 0
357:1/0 = 0
358:1/0 = 0
359:1/0 = 0
363:1/0 = 0
364:1/0 = 0
365:1/0 = 0
369:1/0 = 0
370:1/0 = 0
371:1/0 = 0
375:1/0 = 0
376:1/0 = 0
377:1/0 = 0
381:1/0 = 0
382:1/0 = 0
383:1/0 = 0
387:1/0 = 0
388:1/0 = 0
389:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
50:2/0 = 0
51:2/0 = 0
52:2/0 = 0
56:2/0 = 0
57:2/0 = 0
58:2/0 = 0
62:2/0 = 0
63:2/0 = 0
64:2/0 = 0
68:2/0 = 0
69:2/0 = 0
70:2/0 = 0
74:2/0 = 0
75:2/0 = 0
76:2/0 = 0
80:2/0 = 0
81:2/0 = 0
82:2/0 = 0
86:2/0 = 0
87:2/0 = 0
88:2/0 = 0
92:2/0 = 0
93:2/0 = 0
94:2/0 = 0
97:2/0 = 0
98:2/0 = 0
99:2/0 = 0
100:2/0 = 0
104:2/0 = 0
105:2/0 = 0
106:2/0 = 0
110:2/0 = 0
111:2/0 = 0
112:2/0 = 0
116:2/0 = 0
117:2/0 = 0
118:2/0 = 0
122:2/0 = 0
123:2/0 = 0
124:2/0 = 0
128:2/0 = 0
129:2/0 = 0
130:2/0 = 0
134:2/0 = 0
135:2/0 = 0
136:2/0 = 0
140:2/0 = 0
141:2/0 = 0
142:2/0 = 0
146:2/0 = 0
147:2/0 = 0
148:2/0 = 0
152:2/0 = 0
153:2/0 = 0
154:2/0 = 0
158:2/0 = 0
159:2/0 = 0
160:2/0 = 0
161:2/0 = 0
164:2/0 = 0
165:2/0 = 0
166:2/0 = 0
167:2/0 = 0
170:2/0 = 0
171:2/0 = 0
172:2/0 = 0
173:2/0 = 0
176:2/0 = 0
177:2/0 = 0
178:2/0 = 0
182:2/0 = 0
183:2/0 = 0
184:2/0 = 0
188:2/0 = 0
189:2/0 = 0
190:2/0 = 0
194:2/0 = 0
195:2/0 = 0
196:2/0 = 0
200:2/0 = 0
201:2/0 = 0
202:2/0 = 0
206:2/0 = 0
207:2/0 = 0
208:2/0 = 0
212:2/0 = 0
213:2/0 = 0
214:2/0 = 0
218:2/0 = 0
219:2/0 = 0
220:2/0 = 0
224:2/0 = 0
225:2/0 = 0
226:2/0 = 0
227:2/0 = 0
230:2/0 = 0
231:2/0 = 0
232:2/0 = 0
233:2/0 = 0
236:2/0 = 0
237:2/0 = 0
238:2/0 = 0
239:2/0 = 0
242:2/0 = 0
243:2/0 = 0
244:2/0 = 0
248:2/0 = 0
249:2/0 = 0
250:2/0 = 0
254:2/0 = 0
255:2/0 = 0
256:2/0 = 0
260:2/0 = 0
261:2/0 = 0
262:2/0 = 0
266:2/0 = 0
267:2/0 = 0
268:2/0 = 0
272:2/0 = 0
273:2/0 = 0
274:2/0 = 0
278:2/0 = 0
279:2/0 = 0
280:2/0 = 0
284:2/0 = 0
285:2/0 = 0
286:2/0 = 0
290:2/0 = 0
291:2/0 = 0
292:2/0 = 0
295:2/0 = 0
296:2/0 = 0
297:2/0 = 0
298:2/0 = 0
302:2/0 = 0
303:2/0 = 0
304:2/0 = 0
308:2/0 = 0
309:2/0 = 0
310:2/0 = 0
314:2/0 = 0
315:2/0 = 0
316:2/0 = 0
320:2/0 = 0
321:2/0 = 0
322:2/0 = 0
326:2/0 = 0
327:2/0 = 0
328:2/0 = 0
332:2/0 = 0
333:2/0 = 0
334:2/0 = 0
338:2/0 = 0
339:2/0 = 0
340:2/0 = 0
344:2/0 = 0
345:2/0 = 0
346:2/0 = 0
350:2/0 = 0
351:2/0 = 0
352:2/0 = 0
356:2/0 = 0
357:2/0 = 0
358:2/0 = 0
362:2/0 = 0
363:2/0 = 0
364:2/0 = 0
368:2/0 = 0
369:2/0 = 0
370:2/0 = 0
374:2/0 = 0
375:2/0 = 0
376:2/0 = 0
380:2/0 = 0
381:2/0 = 0
382:2/0 = 0
386:2/0 = 0
387:2/0 = 0
388:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
43:3/0 = 0
44:3/0 = 0
45:3/0 = 0
48:3/0 = 0
49:3/0 = 0
50:3/0 = 0
51:3/0 = 0
55:3/0 = 0
56:3/0 = 0
57:3/0 = 0
61:3/0 = 0
62:3/0 = 0
63:3/0 = 0
67:3/0 = 0
68:3/0 = 0
69:3/0 = 0
73:3/0 = 0
74:3/0 = 0
75:3/0 = 0
79:3/0 = 0
80:3/0 = 0
81:3/0 = 0
85:3/0 = 0
86:3/0 = 0
87:3/0 = 0
91:3/0 = 0
92:3/0 = 0
93:3/0 = 0
97:3/0 = 0
98:3/0 = 0
99:3/0 = 0
103:3/0 = 0
104:3/0 = 0
105:3/0 = 0
109:3/0 = 0
110:3/0 = 0
111:3/0 = 0
112:3/0 = 0
115:3/0 = 0
116:3/0 = 0
117:3/0 = 0
118:3/0 = 0
121:3/0 = 0
122:3/0 = 0
123:3/0 = 0
124:3/0 = 0
127:3/0 = 0
128:3/0 = 0
129:3/0 = 0
133:3/0 = 0
134:3/0 = 0
135:3/0 = 0
139:3/0 = 0
140:3/0 = 0
141:3/0 = 0
145:3/0 = 0
146:3/0 = 0
147:3/0 = 0
151:3/0 = 0
152:3/0 = 0
153:3/0 = 0
157:3/0 = 0
158:3/0 = 0
159:3/0 = 0
163:3/0 = 0
164:3/0 = 0
165:3/0 = 0
169:3/0 = 0
170:3/0 = 0
171:3/0 = 0
175:3/0 = 0
176:3/0 = 0
177:3/0 = 0
181:3/0 = 0
182:3/0 = 0
183:3/0 = 0
187:3/0 = 0
188:3/0 = 0
189:3/0 = 0
193:3/0 = 0
194:3/0 = 0
195:3/0 = 0
199:3/0 = 0
200:3/0 = 0
201:3/0 = 0
205:3/0 = 0
206:3/0 = 0
207:3/0 = 0
211:3/0 = 0
212:3/0 = 0
213:3/0 = 0
217:3/0 = 0
218:3/0 = 0
219:3/0 = 0
223:3/0 = 0
224:3/0 = 0
225:3/0 = 0
229:3/0 = 0
230:3/0 = 0
231:3/0 = 0
235:3/0 = 0
236:3/0 = 0
237:3/0 = 0
241:3/0 = 0
242:3/0 = 0
243:3/0 = 0
247:3/0 = 0
248:3/0 = 0
249:3/0 = 0
253:3/0 = 0
254:3/0 = 0
255:3/0 = 0
259:3/0 = 0
260:3/0 = 0
261:3/0 = 0
265:3/0 = 0
266:3/0 = 0
267:3/0 = 0
271:3/0 = 0
272:3/0 = 0
273:3/0 = 0
274:3/0 = 0
277:3/0 = 0
278:3/0 = 0
279:3/0 = 0
280:3/0 = 0
283:3/0 = 0
284:3/0 = 0
285:3/0 = 0
286:3/0 = 0
289:3/0 = 0
290:3/0 = 0
291:3/0 = 0
295:3/0 = 0
296:3/0 = 0
297:3/0 = 0
301:3/0 = 0
302:3/0 = 0
303:3/0 = 0
307:3/0 = 0
308:3/0 = 0
309:3/0 = 0
313:3/0 = 0
314:3/0 = 0
315:3/0 = 0
319:3/0 = 0
320:3/0 = 0
321:3/0 = 0
325:3/0 = 0
326:3/0 = 0
327:3/0 = 0
331:3/0 = 0
332:3/0 = 0
333:3/0 = 0
337:3/0 = 0
338:3/0 = 0
339:3/0 = 0
342:3/0 = 0
343:3/0 = 0
344:3/0 = 0
345:3/0 = 0
349:3/0 = 0
350:3/0 = 0
351:3/0 = 0
355:3/0 = 0
356:3/0 = 0
357:3/0 = 0
361:3/0 = 0
362:3/0 = 0
363:3/0 = 0
367:3/0 = 0
368:3/0 = 0
369:3/0 = 0
373:3/0 = 0
374:3/0 = 0
375:3/0 = 0
379:3/0 = 0
380:3/0 = 0
381:3/0 = 0
385:3/0 = 0
386:3/0 = 0
387:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
42:4/0 = 0
43:4/0 = 0
44:4/0 = 0
48:4/0 = 0
49:4/0 = 0
50:4/0 = 0
55:4/0 = 0
56:4/0 = 0
61:4/0 = 0
62:4/0 = 0
63:4/0 = 0
67:4/0 = 0
68:4/0 = 0
69:4/0 = 0
73:4/0 = 0
74:4/0 = 0
75:4/0 = 0
79:4/0 = 0
80:4/0 = 0
85:4/0 = 0
86:4/0 = 0
91:4/0 = 0
92:4/0 = 0
97:4/0 = 0
98:4/0 = 0
103:4/0 = 0
104:4/0 = 0
109:4/0 = 0
110:4/0 = 0
115:4/0 = 0
116:4/0 = 0
121:4/0 = 0
122:4/0 = 0
127:4/0 = 0
128:4/0 = 0
133:4/0 = 0
134:4/0 = 0
139:4/0 = 0
140:4/0 = 0
145:4/0 = 0
146:4/0 = 0
151:4/0 = 0
152:4/0 = 0
157:4/0 = 0
158:4/0 = 0
163:4/0 = 0
164:4/0 = 0
169:4/0 = 0
170:4/0 = 0
175:4/0 = 0
176:4/0 = 0
181:4/0 = 0
182:4/0 = 0
187:4/0 = 0
188:4/0 = 0
193:4/0 = 0
194:4/0 = 0
199:4/0 = 0
200:4/0 = 0
205:4/0 = 0
206:4/0 = 0
211:4/0 = 0
212:4/0 = 0
217:4/0 = 0
218:4/0 = 0
223:4/0 = 0
224:4/0 = 0
229:4/0 = 0
230:4/0 = 0
235:4/0 = 0
236:4/0 = 0
241:4/0 = 0
242:4/0 = 0
247:4/0 = 0
248:4/0 = 0
253:4/0 = 0
254:4/0 = 0
259:4/0 = 0
260:4/0 = 0
265:4/0 = 0
266:4/0 = 0
271:4/0 = 0
272:4/0 = 0
277:4/0 = 0
278:4/0 = 0
283:4/0 = 0
284:4/0 = 0
289:4/0 = 0
290:4/0 = 0
295:4/0 = 0
296:4/0 = 0
301:4/0 = 0
302:4/0 = 0
307:4/0 = 0
308:4/0 = 0
313:4/0 = 0
314:4/0 = 0
319:4/0 = 0
320:4/0 = 0
321:4/0 = 0
325:4/0 = 0
326:4/0 = 0
327:4/0 = 0
331:4/0 = 0
332:4/0 = 0
333:4/0 = 0
337:4/0 = 0
338:4/0 = 0
342:4/0 = 0
343:4/0 = 0
344:4/0 = 0
348:4/0 = 0
349:4/0 = 0
350:4/0 = 0
354:4/0 = 0
355:4/0 = 0
356:4/0 = 0
360:4/0 = 0
361:4/0 = 0
362:4/0 = 0
366:4/0 = 0
367:4/0 = 0
368:4/0 = 0
372:4/0 = 0
373:4/0 = 0
374:4/0 = 0
378:4/0 = 0
379:4/0 = 0
380:4/0 = 0
384:4/0 = 0
385:4/0 = 0
386:4/0 = 0

[sub_resource type="TileSet" id="TileSet_7qjsm"]
sources/0 = SubResource("TileSetAtlasSource_oliye")
sources/1 = SubResource("TileSetAtlasSource_ech3s")

[sub_resource type="Animation" id="Animation_q3uxn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("guard:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DimensionalPortal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("guard2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(233, 106)]
}

[sub_resource type="Animation" id="Animation_h7pm6"]
resource_name = "camera_1"
length = 3.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(233, 106), Vector2(439, 106)]
}

[sub_resource type="Animation" id="Animation_vf7xv"]
resource_name = "guard"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("guard:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("guard2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0]
}

[sub_resource type="Animation" id="Animation_y0puw"]
resource_name = "portal"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DimensionalPortal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uoe2i"]
_data = {
"RESET": SubResource("Animation_q3uxn"),
"camera_1": SubResource("Animation_h7pm6"),
"guard": SubResource("Animation_vf7xv"),
"portal": SubResource("Animation_y0puw")
}

[node name="Story board 1" type="Node"]
script = ExtResource("1_iwsi2")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7qjsm")
format = 2
layer_0/name = "back"
layer_1/name = "main"
layer_1/tile_data = PackedInt32Array(655369, 65536, 0, 655371, 196608, 0, 655372, 262144, 0, 655373, 327680, 0, 655374, 393216, 0, 655375, 65536, 0, 655376, 131072, 0, 655377, 196608, 0, 655378, 262144, 0, 655370, 131072, 0, 655379, 327680, 0, 655380, 393216, 0, 655381, 65536, 0, 655382, 131072, 0, 655383, 196608, 0, 655384, 262144, 0, 655385, 327680, 0, 655386, 393216, 0, 655387, 65536, 0, 655388, 131072, 0, 655389, 196608, 0, 655390, 262144, 0, 655391, 327680, 0, 524293, 0, 8, 589829, 0, 9, 655365, 0, 10, 720901, 0, 11, 524294, 65536, 8, 589830, 65536, 9, 655366, 65536, 10, 720902, 65536, 11, 589831, 131072, 9, 655367, 131072, 10, 720903, 131072, 11, 589832, 196608, 9, 655368, 196608, 10, 720904, 196608, 11, 262149, 0, 536870920, 262150, 65536, 536870920, 196613, 0, 536870921, 196614, 65536, 536870921, 196615, 131072, 536870921, 196616, 196608, 536870921, 131077, 0, 536870922, 131078, 65536, 536870922, 131079, 131072, 536870922, 131080, 196608, 536870922, 65541, 0, 536870923, 65542, 65536, 536870923, 65543, 131072, 536870923, 65544, 196608, 536870923, 131081, 65536, 536870912, 131082, 131072, 536870912, 131083, 196608, 536870912, 131084, 262144, 536870912, 131085, 327680, 536870912, 131086, 393216, 536870912, 131087, 65536, 536870912, 131088, 131072, 536870912, 131089, 196608, 536870912, 131090, 262144, 536870912, 131091, 327680, 536870912, 131092, 393216, 536870912, 131093, 65536, 536870912, 131094, 131072, 536870912, 131095, 196608, 536870912, 131096, 262144, 536870912, 131097, 327680, 536870912, 131098, 393216, 536870912, 131099, 65536, 536870912, 131100, 131072, 536870912, 131101, 196608, 536870912, 131102, 262144, 536870912, 131103, 327680, 536870912, 65545, 131072, 536870913, 65546, 196608, 536870913, 65547, 262144, 536870913, 65548, 327680, 536870913, 65549, 131072, 536870913, 65550, 196608, 536870913, 65551, 262144, 536870913, 65552, 327680, 536870913, 65553, 131072, 536870913, 65554, 196608, 536870913, 65555, 262144, 536870913, 65556, 327680, 536870913, 65557, 131072, 536870913, 65558, 196608, 536870913, 65559, 262144, 536870913, 65560, 327680, 536870913, 131104, 393216, 536870912, 655392, 393216, 0, 720905, 131072, 1, 720906, 196608, 1, 720907, 262144, 1, 720908, 327680, 1, 720909, 131072, 1, 720910, 196608, 1, 720911, 262144, 1, 720912, 327680, 1, 720913, 131072, 1, 720914, 196608, 1, 720915, 262144, 1, 720916, 327680, 1, 720917, 131072, 1, 720918, 196608, 1, 720919, 262144, 1, 720920, 327680, 1, 720922, 131072, 1, 720923, 196608, 1, 720924, 262144, 1, 720925, 327680, 1, 720926, 131072, 1, 720927, 196608, 1, 720928, 262144, 1, 720921, 131072, 1, 65561, 131072, 536870913, 65562, 196608, 536870913, 65563, 262144, 536870913, 65564, 327680, 536870913, 65565, 131072, 536870913, 65566, 196608, 536870913, 65567, 262144, 536870913, 65568, 327680, 536870913, 65572, 0, 805306379, 65571, 65536, 805306379, 65570, 131072, 805306379, 65569, 196608, 805306379, 131108, 0, 805306378, 131107, 65536, 805306378, 131106, 131072, 805306378, 131105, 196608, 805306378, 196644, 0, 805306377, 196643, 65536, 805306377, 196642, 131072, 805306377, 196641, 196608, 805306377, 262180, 0, 805306376, 262179, 65536, 805306376, 524324, 0, 268435464, 524323, 65536, 268435464, 589860, 0, 268435465, 589859, 65536, 268435465, 589858, 131072, 268435465, 589857, 196608, 268435465, 655396, 0, 268435466, 655395, 65536, 268435466, 655394, 131072, 268435466, 655393, 196608, 268435466, 720932, 0, 268435467, 720931, 65536, 268435467, 720930, 131072, 268435467, 720929, 196608, 268435467)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(233, 106)
zoom = Vector2(4, 4)

[node name="guard" type="Sprite2D" parent="."]
position = Vector2(170, 112)
texture = ExtResource("4_lcxu1")
hframes = 4

[node name="guard2" type="Sprite2D" parent="."]
position = Vector2(501, 112)
texture = ExtResource("4_lcxu1")
flip_h = true
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uoe2i")
}

[node name="DimensionalPortal" type="Sprite2D" parent="."]
position = Vector2(238, -53)
texture = ExtResource("6_1uy2n")
hframes = 3
vframes = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="BgOnly" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(1, 1, 1, 0.847059)
z_index = -5
position = Vector2(357, -26)
texture = ExtResource("6_6fal5")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(1, 1, 1, 0.847059)
position = Vector2(75.5, -56)

[node name="BgfcL1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color(1, 1, 1, 0.847059)
position = Vector2(282.5, 139)
texture = ExtResource("7_dlxv0")
vframes = 4

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(1, 1, 1, 0.847059)
position = Vector2(25.5, -54)

[node name="BgfcL2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
modulate = Color(1, 1, 1, 0.847059)
position = Vector2(339.5, 177)
texture = ExtResource("7_dlxv0")
offset = Vector2(2, 2)
vframes = 4
frame = 1

[node name="timer" type="Node" parent="."]

[node name="tim_1" type="Timer" parent="timer"]

[node name="tim_2" type="Timer" parent="timer"]

[node name="tim_3" type="Timer" parent="timer"]

[node name="tim_4" type="Timer" parent="timer"]

[node name="tim_5" type="Timer" parent="timer"]

[node name="tim_6" type="Timer" parent="timer"]

[node name="Label" type="Label" parent="."]
offset_left = 231.0
offset_top = 64.0
offset_right = 396.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("8_cu1bv")
theme_override_font_sizes/font_size = 23
text = "Once upon a time"

[connection signal="timeout" from="timer/tim_1" to="." method="_on_tim_1_timeout"]
[connection signal="timeout" from="timer/tim_2" to="." method="_on_tim_1_timeout"]
[connection signal="timeout" from="timer/tim_3" to="." method="_on_tim_1_timeout"]
[connection signal="timeout" from="timer/tim_4" to="." method="_on_tim_1_timeout"]
[connection signal="timeout" from="timer/tim_5" to="." method="_on_tim_1_timeout"]
[connection signal="timeout" from="timer/tim_6" to="." method="_on_tim_1_timeout"]
